vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/linux/demo_centos/include/VzLPRClientSDK.h


VZ_LPRC_API int __STDCALL VzLPRClient_Setup();
VZ_LPRC_API void __STDCALL VzLPRClient_Cleanup();
typedef void (__STDCALL *VZLPRC_FIND_DEVICE_CALLBACK)(const char *pStrDevName, const char *pStrIPAddr, WORD usPort1, WORD usPort2, unsigned int SL,unsigned int SH, void *pUserData);
VZ_LPRC_API int __STDCALL VZLPRClient_StartFindDevice(VZLPRC_FIND_DEVICE_CALLBACK func, void *pUserData);
VZ_LPRC_API void __STDCALL VZLPRClient_StopFindDevice();
VZ_LPRC_API VzLPRClientHandle __STDCALL VzLPRClient_Open(
  const char *pStrIP,
  WORD wPort,
  const char *pStrUserName,
  const char *pStrPassword);
VZ_LPRC_API int __STDCALL VzLPRClient_Close(VzLPRClientHandle handle);
VZ_LPRC_API int __STDCALL VzLPRClient_IsConnected(VzLPRClientHandle handle, BYTE *pStatus);
VZ_LPRC_API int __STDCALL VzLPRClient_StartRealPlay(VzLPRClientHandle handle, void *hWnd);
VZ_LPRC_API int __STDCALL VzLPRClient_StopRealPlay(int nPlayHandle);
typedef int (__STDCALL *VZLPRC_PLATE_INFO_CALLBACK)(VzLPRClientHandle handle, void *pUserData,
													const TH_PlateResult *pResult, unsigned uNumPlates,
													VZ_LPRC_RESULT_TYPE eResultType,
													const VZ_LPRC_IMAGE_INFO *pImgFull,
													const VZ_LPRC_IMAGE_INFO *pImgPlateClip);
VZ_LPRC_API int __STDCALL VzLPRClient_SetPlateInfoCallBack(VzLPRClientHandle handle, VZLPRC_PLATE_INFO_CALLBACK func, void *pUserData, int bEnableImage);
VZ_LPRC_API int __STDCALL VzLPRClient_ForceTrigger(VzLPRClientHandle handle);
VZ_LPRC_API int __STDCALL VzLPRClient_GetSupportedProvinces(VzLPRClientHandle handle, VZ_LPRC_PROVINCE_INFO *pProvInfo);
VZ_LPRC_API int __STDCALL VzLPRClient_PresetProvinceIndex(VzLPRClientHandle handle, int nIndex);
VZ_LPRC_API int __STDCALL VzLPRClient_ImageSaveToJpeg(const VZ_LPRC_IMAGE_INFO *pImgInfo, const char *pFullPathName, int nQuality);
VZ_LPRC_API int __STDCALL VzLPRClient_GetSnapShootToJpeg2(int nPlayHandle, const char *pFullPathName, int nQuality);
VZ_LPRC_API int __STDCALL VzLPRClient_SetIOOutput(VzLPRClientHandle handle, unsigned uChnId, int nOutput);
VZ_LPRC_API int __STDCALL VzLPRClient_SetSerialParameter(VzLPRClientHandle handle, int nSerialPort,
														 const VZ_SERIAL_PARAMETER *pParameter);
VZ_LPRC_API int __STDCALL VzLPRClient_GetSerialParameter(VzLPRClientHandle handle, int nSerialPort,
														 VZ_SERIAL_PARAMETER *pParameter);
typedef void (__STDCALL *VZDEV_SERIAL_RECV_DATA_CALLBACK)(int nSerialHandle, const unsigned char *pRecvData, unsigned uRecvSize, void *pUserData);
VZ_LPRC_API int __STDCALL VzLPRClient_SerialStart(VzLPRClientHandle handle, int nSerialPort,
												  VZDEV_SERIAL_RECV_DATA_CALLBACK func, void *pUserData);
VZ_LPRC_API int __STDCALL VzLPRClient_SerialSend(int nSerialHandle, const unsigned char *pData, unsigned uSizeData);
VZ_LPRC_API int __STDCALL VzLPRClient_SerialStop(int nSerialHandle);
VZ_LPRC_API int __STDCALL VzLPRClient_WriteUserData(VzLPRClientHandle handle, const unsigned char *pUserData, unsigned uSizeData);
VZ_LPRC_API int __STDCALL VzLPRClient_ReadUserData(VzLPRClientHandle handle, unsigned char *pBuffer, unsigned uSizeBuf);
VZ_LPRC_API int __STDCALL VzLPRClient_GetSerialNumber(VzLPRClientHandle handle, VZ_DEV_SERIAL_NUM *pSN);
VZ_LPRC_API int __STDCALL VzLPRClient_GetDateTime(VzLPRClientHandle handle, VZ_DATE_TIME_INFO *pDTInfo);
VZ_LPRC_API int __STDCALL VzLPRClient_SetDateTime(VzLPRClientHandle handle, const VZ_DATE_TIME_INFO *pDTInfo);
VZ_LPRC_API int __STDCALL VzLPRClient_SaveRealData(VzLPRClientHandle handle,char *sFileName);
VZ_LPRC_API int __STDCALL VzLPRClient_StopSaveRealData(VzLPRClientHandle handle);
VZ_LPRC_API int __STDCALL VzLPRClient_SetOsdParam(VzLPRClientHandle handle, VZ_LPRC_OSD_Param *pParam);
VZ_LPRC_API int __STDCALL VzLPRClient_GetOsdParam(VzLPRClientHandle handle, VZ_LPRC_OSD_Param *pParam);
VZ_LPRC_API int __STDCALL VzLPRClient_SetOfflineCheck(VzLPRClientHandle handle);
VZ_LPRC_API int __STDCALL VzLPRClient_CancelOfflineCheck(VzLPRClientHandle handle);
VZ_LPRC_API int __STDCALL VzLPRClient_QueryCountByTimeAndPlate(VzLPRClientHandle handle, const char *pStartTime, const char *pEndTime, const char *keyword);
VZ_LPRC_API int __STDCALL VzLPRClient_QueryPageRecordByTimeAndPlate(VzLPRClientHandle handle, const char *pStartTime, const char *pEndTime, const char *keyword, int start, int end);
VZ_LPRC_API int __STDCALL VzLPRClient_SetQueryPlateCallBack(VzLPRClientHandle handle, VZLPRC_PLATE_INFO_CALLBACK func, void *pUserData);
VZ_LPRC_API int __STDCALL VzLPRClient_LoadImageById(VzLPRClientHandle handle, int id, void *pdata, int* size);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoEncodeType(VzLPRClientHandle handle, int *pEncType);
VZ_LPRC_API int __STDCALL VzLPRClient_GetGPIOValue(VzLPRClientHandle handle, int gpioIn, int *value);
VZ_LPRC_API int __STDCALL VzLPRClient_SetPlateRecType(VzLPRClientHandle handle, unsigned uBitsRecType);
VZ_LPRC_API int __STDCALL VzLPRClient_GetPlateRecType(VzLPRClientHandle handle, unsigned *pBitsRecType);
VZ_LPRC_API int __STDCALL VzLPRClient_SetPlateTrigType(VzLPRClientHandle handle, unsigned uBitsTrigType);
VZ_LPRC_API int __STDCALL VzLPRClient_GetPlateTrigType(VzLPRClientHandle handle, unsigned *pBitsTrigType);
VZ_LPRC_API int __STDCALL VzLPRClient_UpdateNetworkParam(unsigned int SL, unsigned int SH, const char* strNewIP, const char* strGateway, const char *strNetmask);
VZ_LPRC_API int __STDCALL VzLPRClient_GetEMS(VzLPRClientHandle handle, VZ_LPRC_ACTIVE_ENCRYPT* pData);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoFrameSizeIndex(VzLPRClientHandle handle, int *sizeval);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoFrameSizeIndex(VzLPRClientHandle handle, int sizeval);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoFrameRate(VzLPRClientHandle handle, int *Rateval);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoFrameRate(VzLPRClientHandle handle, int Rateval);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoCompressMode(VzLPRClientHandle handle, int *modeval);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoCompressMode(VzLPRClientHandle handle, int modeval);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoCBR(VzLPRClientHandle handle, int *rateval, int *ratelist);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoCBR(VzLPRClientHandle handle, int rateval);
VZ_LPRC_API int __STDCALL VzLPRClient_GetDrawMode(VzLPRClientHandle handle, VZ_LPRC_DRAWMODE * pDrawMode);
VZ_LPRC_API int __STDCALL VzLPRClient_SetDrawMode(VzLPRClientHandle handle, VZ_LPRC_DRAWMODE * pDrawMode);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoPara(VzLPRClientHandle handle, int *brt, int *cst, int *sat, int *hue);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoPara(VzLPRClientHandle handle, int brt, int cst, int sat, int hue);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoEncodeType(VzLPRClientHandle handle, int cmd);
VZ_LPRC_API int __STDCALL VzLPRClient_GetVideoVBR(VzLPRClientHandle handle, int *levelval);
VZ_LPRC_API int __STDCALL VzLPRClient_SetVideoVBR(VzLPRClientHandle handle, int levelval);
VZ_LPRC_API int __STDCALL VzLPRClient_GetFrequency(VzLPRClientHandle handle, int *frequency);
VZ_LPRC_API int __STDCALL VzLPRClient_SetFrequency(VzLPRClientHandle handle, int frequency);
VZ_LPRC_API int __STDCALL VzLPRClient_GetShutter(VzLPRClientHandle handle, int *shutter);
VZ_LPRC_API int __STDCALL VzLPRClient_SetShutter(VzLPRClientHandle handle, int shutter);
VZ_LPRC_API int __STDCALL VzLPRClient_GetFlip(VzLPRClientHandle handle, int *flip);
VZ_LPRC_API int __STDCALL VzLPRClient_SetFlip(VzLPRClientHandle handle, int flip);
VZ_LPRC_API int __STDCALL VzLPRClient_SetTriggerDelay(VzLPRClientHandle handle, int nDelay);
VZ_LPRC_API int __STDCALL VzLPRClient_GetTriggerDelay(VzLPRClientHandle handle, int* nDelay);
VZ_LPRC_API int __STDCALL VzLPRClient_SetWLCheckMethod(VzLPRClientHandle handle, int nType);
VZ_LPRC_API int __STDCALL VzLPRClient_GetWLCheckMethod(VzLPRClientHandle handle, int* nType);
VZ_LPRC_API int __STDCALL VzLPRClient_SetWLFuzzy(VzLPRClientHandle handle, int nFuzzyType, int nFuzzyLen, bool bFuzzyCC);
VZ_LPRC_API int __STDCALL VzLPRClient_GetWLFuzzy(VzLPRClientHandle handle, int* nFuzzyType, int* nFuzzyLen, bool* bFuzzyCC);
VZ_LPRC_API int __STDCALL VzLPRClient_SetOutputConfig(VzLPRClientHandle handle, VZ_OutputConfigInfo* pOutputConfigInfo);
VZ_LPRC_API int __STDCALL VzLPRClient_GetOutputConfig(VzLPRClientHandle handle, VZ_OutputConfigInfo* pOutputConfigInfo);
VZ_LPRC_API int __STDCALL VzLPRClient_AesCtrDecrypt(const char* hertextb, int nTextBits, const char* password, char *decryptText, int decryptLen);
VZ_LPRC_API int __STDCALL VzLPRClient_StartLogin(VzLPRClientHandle handle, VZ_LPRC_ACTIVE_ENCRYPT* pData);
VZ_LPRC_API int __STDCALL VzLPRClient_LoginAuth(VzLPRClientHandle handle, const char* key);
VZ_LPRC_API int __STDCALL VzLPRClient_PlayVoice(VzLPRClientHandle handle, const char *voice, int interval, int volume, int male);