vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/DemoSource/Delphi/VzDelphiSDKDemo/inc/VzLPRClientSDKDefine.h


typedef int VzLPRClientHandle;
typedef enum
{
	VZ_LPRC_RESULT_REALTIME,		
	VZ_LPRC_RESULT_STABLE,			
	VZ_LPRC_RESULT_FORCE_TRIGGER,	
	VZ_LPRC_RESULT_IO_TRIGGER,		
	VZ_LPRC_RESULT_VLOOP_TRIGGER,	
	VZ_LPRC_RESULT_MULTI_TRIGGER,	
	VZ_LPRC_RESULT_TYPE_NUM			
}
VZ_LPRC_RESULT_TYPE;
typedef struct
{
	unsigned		uWidth;			
	unsigned		uHeight;		
	unsigned		uPitch;			
	unsigned		uPixFmt;		
	unsigned char	*pBuffer;	
}
VZ_LPRC_IMAGE_INFO;