vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/linux/demo_centos/include/VzLPRClientSDK_WhiteList.h


VZ_LPRC_API int __STDCALL VzLPRClient_WhiteListSetQueryCallBack(VzLPRClientHandle handle, VZLPRC_WLIST_QUERY_CALLBACK func, void *pUserData);
VZ_LPRC_API int __STDCALL VzLPRClient_WhiteListLoadVehicle(VzLPRClientHandle handle, 
															VZ_LPR_WLIST_LOAD_CONDITIONS *pLoadCondition);
VZ_LPRC_API int __STDCALL VzLPRClient_WhiteListImportRows(VzLPRClientHandle handle, 
														  unsigned rowcount, 
														  VZ_LPR_WLIST_ROW *pRowDatas,
														  VZ_LPR_WLIST_IMPORT_RESULT* pResults);
VZ_LPRC_API int __STDCALL VzLPRClient_WhiteListUpdateVehicleByID(VzLPRClientHandle handle, VZ_LPR_WLIST_VEHICLE* pVehicle);
VZ_LPRC_API int __STDCALL VzLPRClient_WhiteListClearCustomersAndVehicles(VzLPRClientHandle handle);
VZ_LPRC_API VZ_DEPRECATED int __STDCALL VzLPRClient_WhiteListDeleteVehicle(VzLPRClientHandle handle, const char* strPlateID);