vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/DemoSource/Delphi/VzDelphiSDKDemo/VzLPRSDK.pas


  type
    //**结果的排列方式*/
  VZ_LPR_WLIST_SORT_TYPE = record
  	key:array[0..VZ_LPR_WLIST_MAX_KEY_LEN-1] of AnsiChar;
  	direction:VZ_LPR_WLIST_SORT_DIRECTION;
  end;
  LPVZ_LPR_WLIST_SORT_TYPE = ^VZ_LPR_WLIST_SORT_TYPE;

  type
  VZ_LPR_WLIST_SEARCH_WHERE = record
     searchType : LongWord;
  	//searchType : VZ_LPR_WLIST_SEARCH_TYPE;					//**<查找的方式，如果是完全匹配，每个条件之间为与，是包含时，每个条件之间为或*/
  	searchConstraintCount : LongWord;	            	//**<查找条件个数，为0表示没有搜索条件*/
  	pSearchConstraints : LPVZ_LPR_WLIST_SEARCH_CONSTRAINT;			//**<查找条件数组指针*/
  end;
  LPVZ_LPR_WLIST_SEARCH_WHERE = ^VZ_LPR_WLIST_SEARCH_WHERE;

  VZ_LPR_WLIST_LOAD_CONDITIONS = record
  	pSearchWhere:LPVZ_LPR_WLIST_SEARCH_WHERE;				//**<查找条件*/
  	pLimit:LPVZ_LPR_WLIST_LIMIT;			          		//**<查找条数限制*/
  	pSortType:LPVZ_LPR_WLIST_SORT_TYPE;					    //**<结果的排序方式，为空表示按默认排序*/
  end;
  LPVZ_LPR_WLIST_LOAD_CONDITIONS = ^VZ_LPR_WLIST_LOAD_CONDITIONS;

  VZLPRC_WLIST_CB_TYPE = (
  	VZLPRC_WLIST_CB_TYPE_ROW = 0,
  	VZLPRC_WLIST_CB_TYPE_CUSTOMER,
  	VZLPRC_WLIST_CB_TYPE_VEHICLE
  );

  const
  ENCRYPT_NAME_LENGTH = 32;
  type
  //**加密类型*/
  VZ_EMS_INFO = record
    uId : LongWord;
    sName : array[0..ENCRYPT_NAME_LENGTH-1] of Char;
  end;

  const
  ENCRYPT_LENGTH = 16;
  SIGNATURE_LENGTH = 32;
  type
  //**当前识别结果加密类型**/
  VZ_LPRC_ACTIVE_ENCRYPT = record
  	uActiveID:LongWord;
    oEncrypt:array[0..ENCRYPT_LENGTH-1] of VZ_EMS_INFO ;
    uSize : LongWord;
    signature : array[0..SIGNATURE_LENGTH-1] of Char;
  end;
  LPVZ_LPRC_ACTIVE_ENCRYPT = ^VZ_LPRC_ACTIVE_ENCRYPT;

type VZLPRC_PLATE_INFO_CALLBACK = function(mhandle: VzLPRClientHandle;
    pUserData: Pointer;
    pResult: PTH_PlateResult;
    uNumPlates: Word;
    eResultType: VZ_LPRC_RESULT_TYPE;
    var pImgFull: VZ_LPRC_IMAGE_INFO;
    var pImgPlateClip: VZ_LPRC_IMAGE_INFO): Integer; stdcall;

type VZLPRC_PLATE_QUERY_CALLBACK  = function(mhandle: VzLPRClientHandle;
    pUserData: Pointer;
    pResult: PTH_PlateResult;
    uNumPlates: Word;
    eResultType: VZ_LPRC_RESULT_TYPE;
    var pImgFull: VZ_LPRC_IMAGE_INFO;
    var pImgPlateClip: VZ_LPRC_IMAGE_INFO): Integer; stdcall;



type VZLPRC_FIND_DEVICE_CALLBACK = function(pStrDevName: PChar;
     pStrIPAddr: PChar;
     usPort1: Word;
     usPort2: Word;
     SL : LongWord;
     SH : LongWord;
     pUserData: Pointer): Integer; stdcall;

type VZDEV_SERIAL_RECV_DATA_CALLBACK = function(nSerialHandle:Integer;
  pRecvData:Pointer;
  uRecvSize:Integer;
  pUserData:Pointer): Integer; stdcall;


  VZLPRC_WLIST_QUERY_CALLBACK = procedure(aType:VZLPRC_WLIST_CB_TYPE; const pLP:LPVZ_LPR_WLIST_VEHICLE; const pCustomer:LPVZ_LPR_WLIST_CUSTOMER; pUserData:Pointer); stdcall;

var
  BusDll: THandle;
  VzLPRClient_Setup: function(): Integer; stdcall;
  VzLPRClient_Cleanup: procedure(); stdcall;
  VZLPRClient_StartFindDevice: function(func: VZLPRC_FIND_DEVICE_CALLBACK; pUserData: Pointer ): Integer; stdcall;
  VZLPRClient_StopFindDevice: function(): Integer; stdcall;
  VzLPRClient_Open: function(pStrIP: PChar; wPort: Word; pStrUserName: PChar; pStrPassword: PChar): VzLPRClientHandle; stdcall;
  VzLPRClient_Close: function(mhandle: VzLPRClientHandle): Integer; stdcall;
  VzLPRClient_StartRealPlay: function(mhandle: VzLPRClientHandle; hWnd: HWND): Integer; stdcall;
  VzLPRClient_StopRealPlay: function(nPlayHandle: Integer): Integer; stdcall;
  VzLPRClient_SetPlateInfoCallBack: function(mhandle: VzLPRClientHandle; mfunc: VZLPRC_PLATE_INFO_CALLBACK; pUserData: Pointer; bEnableImage: Integer): Integer; stdcall;
  VzLPRClient_SetIOOutput: function(mhandle: VzLPRClientHandle; uChnId: Word; nOutput: Integer): Integer; stdcall;
  VzLPRClient_GetSnapShootToJpeg2: function(mhandle: VzLPRClientHandle; pFullPathName: PChar; nQuality: Integer): Integer; stdcall;
  VzLPRClient_ImageSaveToJpeg: function(pImgFull: PVZ_LPRC_IMAGE_INFO; pFullPathName: PChar; nQuality: Integer): Integer; stdcall;
  VzLPRClient_SerialStart: function(mhandle: VzLPRClientHandle; nSerialPort:Integer; mfunc: VZDEV_SERIAL_RECV_DATA_CALLBACK; pUserData:Pointer) : Integer; stdcall;
  VzLPRClient_SerialSend: function(nSerialHandle:Integer; pData:Pointer; uSizeData:Integer) : Integer; stdcall;
  VzLPRClient_SerialStop: function(nSerialHandle:Integer) :  Integer; stdcall;
  VzLPRClient_GetSerialNumber:function(mhandle: VzLPRClientHandle; pSerialNum:PVZ_DEV_SERIAL_NUM) : Integer; stdcall;
  VzLPRClient_ReadUserData:function(mhandle: VzLPRClientHandle; pBuffer:Pointer; uSizeBuf:Integer ) : Integer; stdcall;
  VzLPRClient_WriteUserData:function(mhandle: VzLPRClientHandle; pBuffer:Pointer; uSizeBuf:Integer ) : Integer; stdcall;
  VzLPRClient_SetOfflineCheck:function(mhandle: VzLPRClientHandle) : Integer; stdcall;
  VzLPRClient_CancelOfflineCheck:function(mhandle: VzLPRClientHandle) : Integer; stdcall;
  VzLPRClient_GetSupportedProvinces:function(mhandle: VzLPRClientHandle; pProvInfo:PVZ_LPRC_PROVINCE_INFO) : Integer; stdcall;
  VzLPRClient_PresetProvinceIndex:function(mhandle: VzLPRClientHandle; nIndex:Integer) : Integer; stdcall;
  VzLPRClient_WhiteListImportRows:function(mhandle:Integer; rowcount:LongWord; pRowDatas:LPVZ_LPR_WLIST_ROW; pResults:LPVZ_LPR_WLIST_IMPORT_RESULT):Integer; stdcall;
  VzLPRClient_WhiteListLoadVehicle:function(mhandle:Integer; pLoadCondition:LPVZ_LPR_WLIST_LOAD_CONDITIONS):Integer; stdcall;
  VzLPRClient_WhiteListSetQueryCallBack:function(mhandle:Integer; func:VZLPRC_WLIST_QUERY_CALLBACK; pUserData:Pointer):Integer; stdcall;
  VzLPRClient_WhiteListUpdateVehicleByID:function(mhandle:Integer; pWlistVehicle:LPVZ_LPR_WLIST_VEHICLE):Integer; stdcall;
  VzLPRClient_WhiteListDeleteVehicle:function(mhandle:Integer; pPlateID:PChar):Integer; stdcall;
  VzLPRClient_WhiteListClearCustomersAndVehicles:function(mhandle:Integer):Integer; stdcall;
  VzLPRClient_ForceTrigger:function(mhandle:Integer):Integer; stdcall;
  VzLPRClient_SaveRealData:function(mhandle:Integer; pFullPathName: PChar):Integer; stdcall;
  VzLPRClient_StopSaveRealData:function(mhandle:Integer):Integer; stdcall;
  VzLPRClient_IsConnected:function(mhandle:Integer; var pStatus :Byte):Integer; stdcall;
  VzLPRClient_GetGPIOValue:function(mhandle:Integer; gpioIn:Integer; var value:Integer):Integer; stdcall;
  VzLPRClient_GetOsdParam:function(mhandle:Integer; pOSDParam:PVZ_LPRC_OSD_PARAM):Integer; stdcall;
  VzLPRClient_SetOsdParam:function(mhandle:Integer; pOSDParam:PVZ_LPRC_OSD_PARAM):Integer; stdcall;
  VzLPRClient_SetDateTime:function(mhandle:Integer; pDTinfo:PVZ_DATE_TIME_INFO):Integer; stdcall;
  VzLPRClient_GetDateTime:function(mhandle:Integer; pDTinfo:PVZ_DATE_TIME_INFO):Integer; stdcall;
  VzLPRClient_GetPlateRecType:function(mhandle:Integer; var pBitsRecType:Integer):Integer; stdcall;
  VzLPRClient_SetPlateRecType:function(mhandle:Integer; uBitsRecType:Integer):Integer; stdcall;
  VzLPRClient_GetDrawMode:function(mhandle:Integer;  pDrawMode:PVZ_LPRC_DRAWMODE):Integer; stdcall;
  VzLPRClient_SetDrawMode:function(mhandle:Integer;  pDrawMode:PVZ_LPRC_DRAWMODE):Integer; stdcall;
  VzLPRClient_GetPlateTrigType:function(mhandle:Integer;  var pBitsTrigType:Integer):Integer; stdcall;
  VzLPRClient_SetPlateTrigType:function(mhandle:Integer;  pBitsTrigType:Integer):Integer; stdcall;
  VzLPRClient_GetVideoFrameSizeIndex:function(mhandle:Integer; var sizeval:Integer):Integer; stdcall;
  VzLPRClient_SetVideoFrameSizeIndex:function(mhandle:Integer; sizeval:Integer):Integer; stdcall;
  VzLPRClient_GetVideoFrameRate:function(mhandle:Integer; var Rateval:Integer):Integer; stdcall;
  VzLPRClient_SetVideoFrameRate:function(mhandle:Integer; Rateval:Integer):Integer; stdcall;
  VzLPRClient_GetVideoEncodeType:function(mhandle:Integer; var pEncType:Integer):Integer; stdcall;
  VzLPRClient_SetVideoEncodeType:function(mhandle:Integer; pEncType:Integer):Integer; stdcall;
  VzLPRClient_GetVideoCompressMode:function(mhandle:Integer; var modeval:Integer):Integer; stdcall;
  VzLPRClient_SetVideoCompressMode:function(mhandle:Integer; modeval:Integer):Integer; stdcall;
  VzLPRClient_GetVideoCBR:function(mhandle:Integer; var rateval:Integer; var ratelist:Integer):Integer; stdcall;
  VzLPRClient_SetVideoCBR:function(mhandle:Integer; rateval:Integer):Integer; stdcall;
  VzLPRClient_GetVideoVBR:function(mhandle:Integer; var levelval:Integer):Integer; stdcall;
  VzLPRClient_SetVideoVBR:function(mhandle:Integer; levelval:Integer):Integer; stdcall;
  VzLPRClient_GetVideoPara:function(mhandle:Integer; var brt:Integer; var cst:Integer; var sat:Integer; var hue:Integer):Integer; stdcall;
  VzLPRClient_SetVideoPara:function(mhandle:Integer; brt:Integer; cst:Integer; sat:Integer; hue:Integer):Integer; stdcall;
  VzLPRClient_GetFrequency:function(mhandle:Integer; var frequency:Integer):Integer; stdcall;
  VzLPRClient_SetFrequency:function(mhandle:Integer; frequency:Integer):Integer; stdcall;
  VzLPRClient_GetShutter:function(mhandle:Integer; var shutter:Integer):Integer; stdcall;
  VzLPRClient_SetShutter:function(mhandle:Integer; shutter:Integer):Integer; stdcall;
  VzLPRClient_GetFlip:function(mhandle:Integer; var flip:Integer):Integer; stdcall;
  VzLPRClient_SetFlip:function(mhandle:Integer; flip:Integer):Integer; stdcall;
  VzLPRClient_GetTriggerDelay:function(mhandle:Integer; var nDelay:Integer):Integer; stdcall;
  VzLPRClient_SetTriggerDelay:function(mhandle:Integer; nDelay:Integer):Integer; stdcall;
  VzLPRClient_GetWLCheckMethod:function(mhandle:Integer; var nType:Integer):Integer; stdcall;
  VzLPRClient_SetWLCheckMethod:function(mhandle:Integer; nType:Integer):Integer; stdcall;
  VzLPRClient_GetWLFuzzy:function(mhandle:Integer; var nFuzzyType:Integer; var nFuzzyLen:Integer; var bFuzzyCC:Boolean):Integer; stdcall;
  VzLPRClient_SetWLFuzzy:function(mhandle:Integer; nFuzzyType:Integer; nFuzzyLen:Integer; bFuzzyCC:Boolean):Integer; stdcall;
  VzLPRClient_GetSerialParameter:function(mhandle:Integer; nSerialPort:Integer; pParameter:PVZ_SERIAL_PARAMETER):Integer; stdcall;
  VzLPRClient_SetSerialParameter:function(mhandle:Integer; nSerialPort:Integer; pParameter:PVZ_SERIAL_PARAMETER):Integer; stdcall;
  VzLPRClient_GetOutputConfig:function(mhandle:Integer;  pOutputConfigInfo:PVZ_OutputConfigInfo):Integer; stdcall;
  VzLPRClient_SetOutputConfig:function(mhandle:Integer;  pOutputConfigInfo:PVZ_OutputConfigInfo):Integer; stdcall;
  VzLPRClient_QueryCountByTimeAndPlate:function(mhandle:Integer; pStartTime:PChar; pEndTime:PChar; keyword:PChar):Integer; stdcall;
  VzLPRClient_QueryPageRecordByTimeAndPlate:function(mhandle:Integer; pStartTime:PChar; pEndTime:PChar; keyword:PChar; nStart:Integer; nEnd:Integer):Integer; stdcall;
  VzLPRClient_SetQueryPlateCallBack:function(mhandle:Integer; mfunc: VZLPRC_PLATE_QUERY_CALLBACK; pUserData: Pointer):Integer; stdcall;
  VzLPRClient_UpdateNetworkParam:function(SH:LongWord; SL:LongWord; strNewIP:PChar; strGateway:PChar; strNetmask:PChar):Integer; stdcall;
  VzLPRClient_LoadImageById:function(mhandle:Integer; id : Integer; pData:PByte; pSize:PInteger):Integer; stdcall;
  VzLPRClient_GetEMS:function(mhandle:Integer; pData:LPVZ_LPRC_ACTIVE_ENCRYPT):Integer; stdcall;
  VzLPRClient_StartLogin:function(mhandle:Integer; pData:LPVZ_LPRC_ACTIVE_ENCRYPT):Integer; stdcall;
  VzLPRClient_LoginAuth:function(mhandle:Integer; key:PChar):Integer; stdcall;
  VzLPRClient_AesCtrDecrypt:function(hertextb:PChar; nTextBits:Integer; password:PChar; decryptText:PChar; decryptLen:Integer):Integer; stdcall;
  VzLPRClient_PlayVoice:function(mhandle:VzLPRClientHandle;  voice:PChar; interval,  volume,  male:integer):Integer; stdcall;
function LoadBusModule(): Boolean;
procedure UnLoadBusModule();

implementation
